<resources>
    <string name="app_name">DailyRecipes</string>
    <string name="default_recipe_title">Recipes</string>
    <string name="show">Show</string>
    <string name="edit">Edit</string>
    <string name="delete">X</string>
    <string name="recipe_name">Recipe name</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="add_ingredient">add ingredient</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="recipe_list">Recipes</string>
    <string name="ingredents_list">Ingredients</string>
    <string name="shopping_list">Shopping list</string>
    <string name="recipe">Recipe</string>
    <string name="add_recipe">Add recipe</string>
    <string name="ingredients_lbl">Ingredients :</string>
    <string name="description">Description :</string>
    <string name="image_of_the_recipe">Image of the recipe</string>
    <string name="item_s_name">Item\'s name</string>
    <string name="quatity">quatity</string>
    <string name="day">Day</string>
</resources>